# cometml-cookiecutter-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: .env.example  .gitignore  .mcp.json  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.claude/rules/: changelog-discipline.md  comet-em-best-practices.md  notebook-hygiene.md
{{cookiecutter.repo_name}}/.claude/skills/compare-runs/: SKILL.md
{{cookiecutter.repo_name}}/.claude/skills/evaluate-run/: SKILL.md
{{cookiecutter.repo_name}}/.claude/skills/promote-model/: SKILL.md
{{cookiecutter.repo_name}}/.claude/skills/run-training/: SKILL.md
{{cookiecutter.repo_name}}/.claude/skills/update-changelog/: SKILL.md
{{cookiecutter.repo_name}}/.claude/skills/update-makefile/: SKILL.md
{{cookiecutter.repo_name}}/.claude/skills/update-readme/: SKILL.md
{{cookiecutter.repo_name}}/scripts/: registry_mutate.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.module_name}}/: __init__.py  config.py  dataset.py
{{cookiecutter.repo_name}}/tests/: test_smoke.py
